Fix share screen sizing and spacing

--- a/www/assets/css/scss/overrides.scss
+++ b/www/assets/css/scss/overrides.scss
@@ -204,6 +204,8 @@ body {
             grid-column: 2;
             display: grid;
             grid-template-rows: 1fr auto;
+            gap: 24px;
+            padding-right: 40px;
 
 
             .screenShareContent {
@@ -211,7 +213,7 @@ body {
                 display: flex;
                 align-items: center;
                 border: 8px solid #181A24;
-                border-radius: 16px 0 16px 0;
+                border-radius: 72px 0;
                 background-color: #13141C;
 
             }
